--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 								<h1><strong>Nachammai Lakshmanan</strong></h1>
 							</header>
 							<p>I am a Master in Computer Science student at <a href="https://www.mccormick.northwestern.edu/computer-science/">Northwestern University</a> My areas of interest include machine learning, deep learning, natural language processing, statistical language modeling, algorithms, data structures, operating systems and distributed computing.</p>
+							<ul class="social">
+								<li><a href="https://github.com/nlakshmanan" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/nachammai-lakshmanan/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								</ul>
+						</div>
+						<div>
+
 						</div>
 					</div>
 				</article>
@@ -57,64 +64,96 @@
 		<div class="wrapper style3">
 			<article id="portfolio">
 				<header>
-					<h2>Here’s some stuff I made recently.</h2>
-					<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
+					<h2>Projects</h2>
+					<p></p>
+				</header>
+				<div class="container">
+					<div class="row">
+						<div class="4u">
+							<article class="box style2">
+								<a href="https://github.com/nlakshmanan/Flight-Prices-Prediction" class="image featured"><img src="images/airplane.jpg" alt="" /></a>
+								<h3><a href="https://github.com/nlakshmanan/Flight-Prices-Prediction">Flight Prices Prediction</a></h3>
+								<p>Logistic Regression, K-NN, Cross validation, Random Trees</p>
+								<p>Python, Pandas, Scikit-Learn, Pyplot</p>
+							</article>
+						</div>
+						<div class="4u">
+							<article class="box style2">
+								<a href="https://github.com/nlakshmanan/GhostWriters" class="image featured"><img src="images/ghostwriter.jpg" alt="" /></a>
+								<h3><a href="https://github.com/nlakshmanan/GhostWriters"></a>Ghostwriters</h3>
+								<p>Natural Language Generation, sentiment analysis </p>
+								<p>Python, GPT2, tone analyzer</p>
+							</article>
+						</div>
+						<div class="4u">
+							<article class="box style2">
+								<a href="https://github.com/nlakshmanan/DataScienceFall19" class="image featured"><img src="images/cpdp.jpg" alt="" /></a>
+								<h3><a href="https://github.com/nlakshmanan/DataScienceFall19">Citizens Police Data Project</a></h3>
+								<p>Data Science</p>
+								<p>SQL, Databricks, Visualization - Tableau, D3, Data Cleaning, Document Tagging </p>
+							</article>
+						</div>
+						<div class="4u">
+							<article class="box style2">
+								<a href="https://github.com/nlakshmanan/Conversational-AI" class="image featured"><img src="images/Conversational-AI.jpg" alt="" /></a>
+								<h3><a href="https://github.com/nlakshmanan/Conversational-AI"></a>ScriptIt</h3>
+								<p>Dialog generation and ChatBots</p>
+								<p>Dialo-GPT2</p>
+							</article>
+						</div>
+						<div class="4u">
+							<article class="box style2">
+								<a href="https://github.com/nlakshmanan/Neural-Machine-Transalation" class="image featured"><img src="images/deepLearning.jpeg" alt="" /></a>
+								<h3><a href="https://github.com/nlakshmanan/Neural-Machine-Transalation">Neural Machine transalation</a></h3>
+								<p>Statistical Language Modelling</p>
+								<p>Pytorch</p>
+							</article>
+						</div>
+						<div class="4u">
+							<article class="box style2">
+								<a href="https://github.com/nlakshmanan/Architecture-Design" class="image featured"><img src="images/searchEngine.jpg" alt="" /></a>
+								<h3><a href="https://github.com/nlakshmanan/Architecture-Design">Architecture Design</a></h3>
+								<p>Software Scalable Architectures</p>
+								<p>AWS, Serverless functions, NoSQL, Java, system design</p>
+							</article>
+						</div>
+					</div>
+			</article>
+		</div>
+
+		<!-- Web / App development -->
+		<div class="wrapper style3">
+			<article id="portfolio">
+				<header>
+					<h2> Web / App development / Visualization</h2>
+					<p></p>
 				</header>
 				<div class="container">
 					<div class="row">
 						<div class="4u">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
+								<h3><a href="#">NearUS</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="4u">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
+								<h3><a href="#">Medius</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="4u">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
+								<h3><a href="#">Sunburn-D3</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 					</div>
-					<div class="row">
-						<div class="4u">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="4u">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="4u">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-					</div>
-				</div>
-				<footer>
-					<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-					<a href="#contact" class="button big scrolly">Get in touch with me</a>
-				</footer>
 			</article>
 		</div>
-
 
 		<!-- Work -->
 			<div class="wrapper style2">
@@ -148,10 +187,6 @@
 							</div>
 						</div>
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
-					</footer>
 				</article>
 			</div>
 
@@ -159,8 +194,7 @@
 			<div class="wrapper style4">
 				<article id="contact" class="container 75%">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
+						<h2>Contact me: </h2>
 					</header>
 					<div>
 						<div class="row">
@@ -202,13 +236,13 @@
 								<hr />
 								<h3>Find me on ...</h3>
 								<ul class="social">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+									<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
+									<!--<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>-->
+									<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+									<li><a href="https://www.linkedin.com/in/nachammai-lakshmanan/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<!--<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>-->
+									<!--<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>-->
+									<li><a href="https://github.com/nlakshmanan" class="icon fa-github"><span class="label">Github</span></a></li>
 									<!--
 									<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
@@ -225,11 +259,6 @@
 							</div>
 						</div>
 					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
 				</article>
 			</div>
 
