--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 
 		<!-- Portfolio -->
-		<div class="wrapper style3">
+		<div class="wrapper style6">
 			<article id="portfolio">
 				<header>
 					<h2>Projects</h2>
@@ -73,48 +73,52 @@
 							<article class="box style2">
 								<a href="https://github.com/nlakshmanan/Flight-Prices-Prediction" class="image featured"><img src="images/airplane.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Flight-Prices-Prediction">Flight Prices Prediction</a></h3>
-								<p>Logistic Regression, K-NN, Cross validation, Random Trees</p>
-								<p>Python, Pandas, Scikit-Learn, Pyplot</p>
+								<p>Logistic Regression, K-NN, Cross validation, Random Trees <br/>
+								Python, Pandas, Scikit-Learn, Pyplot</p>
 							</article>
 						</div>
 						<div class="4u">
 							<article class="box style2">
 								<a href="https://github.com/nlakshmanan/GhostWriters" class="image featured"><img src="images/ghostwriter.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/GhostWriters"></a>Ghostwriters</h3>
-								<p>Natural Language Generation, sentiment analysis </p>
-								<p>Python, GPT2, tone analyzer</p>
+								<p>Natural Language Generation, sentiment analysis <br/>
+								Python, GPT2, tone analyzer</p>
 							</article>
 						</div>
 						<div class="4u">
 							<article class="box style2">
 								<a href="https://github.com/nlakshmanan/DataScienceFall19" class="image featured"><img src="images/cpdp.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/DataScienceFall19">Citizens Police Data Project</a></h3>
-								<p>Data Science</p>
-								<p>SQL, Databricks, Visualization - Tableau, D3, Data Cleaning, Document Tagging </p>
+								<p>Data Science<br/>
+								SQL, Databricks, Visualization - Tableau, D3, Data Cleaning, Document Tagging <br/>
+								<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/1793811414263623/8855542390127832/latest.html"> GraphFrames connected components</a>
+								<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/98748205141515/8855542390127832/latest.html"> GraphFrames visualization Complete </a>
+								<!--<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/98748205141507/8855542390127832/latest.html"> GraphFrames visualization Discrete </a>-->
+								<a href="https://nlakshmanan.github.io/D3-sunburn/"> D3 visualization </a> </p>
 							</article>
 						</div>
 						<div class="4u">
 							<article class="box style2">
 								<a href="https://github.com/nlakshmanan/Conversational-AI" class="image featured"><img src="images/Conversational-AI.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Conversational-AI"></a>ScriptIt</h3>
-								<p>Dialog generation and ChatBots</p>
-								<p>Dialo-GPT2</p>
+								<p>Dialog generation and ChatBots<br/>
+								Dialo-GPT2</p>
 							</article>
 						</div>
 						<div class="4u">
 							<article class="box style2">
 								<a href="https://github.com/nlakshmanan/Neural-Machine-Transalation" class="image featured"><img src="images/deepLearning.jpeg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Neural-Machine-Transalation">Neural Machine transalation</a></h3>
-								<p>Statistical Language Modelling</p>
-								<p>Pytorch</p>
+								<p>Statistical Language Modelling<br/>
+								Pytorch</p>
 							</article>
 						</div>
 						<div class="4u">
 							<article class="box style2">
 								<a href="https://github.com/nlakshmanan/Architecture-Design" class="image featured"><img src="images/searchEngine.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Architecture-Design">Architecture Design</a></h3>
-								<p>Software Scalable Architectures</p>
-								<p>AWS, Serverless functions, NoSQL, Java, system design</p>
+								<p>Software Scalable Architectures<br/>
+								AWS, Serverless functions, NoSQL, Java, system design</p>
 							</article>
 						</div>
 					</div>
