--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Nachammai Lakshmanan</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -31,7 +31,7 @@
 					<li><a href="#top">About</a></li>
 					<li><a href="#portfolio">Projects</a></li>
 					<li><a href="#work">Experience</a></li>
-					<li><a href="#publications">Publications</a></li>
+					<!--<li><a href="#publications">Publications</a></li>-->
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -47,14 +47,16 @@
 							<header>
 								<h1><strong>Nachammai Lakshmanan</strong></h1>
 							</header>
-							<p>I am a Master in Computer Science student at <a href="https://www.mccormick.northwestern.edu/computer-science/">Northwestern University</a> My areas of interest include machine learning, deep learning, natural language processing, statistical language modeling, algorithms, data structures, operating systems and distributed computing.</p>
-							<ul class="social">
+							<p>I am a Master in Computer Science student at <a href="https://www.mccormick.northwestern.edu/computer-science/">Northwestern University</a> 
+								My areas of interest include machine learning, statistical language modeling, algorithms and scalable systems. 
+								I am currently working on finding insights to improvise quality of long sentences in neural machine transalation.<br/><br/>
+								email:nachammai@u.northwestern.edu <br/>
+								Last updated: 3rd May 2020
+							</p>
+							<!--<ul class="social">
 								<li><a href="https://github.com/nlakshmanan" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/nachammai-lakshmanan/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								</ul>
-						</div>
-						<div>
-
+								</ul>-->
 						</div>
 					</div>
 				</article>
@@ -126,7 +128,7 @@
 		</div>
 
 		<!-- Web / App development -->
-		<div class="wrapper style3">
+		<!--<div class="wrapper style3">
 			<article id="portfolio">
 				<header>
 					<h2> Web / App development / Visualization</h2>
@@ -157,39 +159,16 @@
 						</div>
 					</div>
 			</article>
-		</div>
+		</div>-->
 
 		<!-- Work -->
 			<div class="wrapper style2">
 				<article id="work">
 					<header>
 						<h2>Experience</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
 					</header>
 					<div class="container">
-						<div class="row">
-							<div class="4u">
-								<section class="box style1">
-									<span class="icon featured fa-comments-o"></span>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section class="box style1">
-									<span class="icon featured fa-camera-retro"></span>
-									<h3>Lorem dolor tempus</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u">
-								<section class="box style1">
-									<span class="icon featured fa-thumbs-o-up"></span>
-									<h3>Feugiat posuere</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-						</div>
+						<img src="images/timeline.jpg" alt="" />
 					</div>
 				</article>
 			</div>
@@ -197,10 +176,10 @@
 		<!-- Contact -->
 			<div class="wrapper style4">
 				<article id="contact" class="container 75%">
-					<header>
+					<!--<<header>
 						<h2>Contact me: </h2>
 					</header>
-					<div>
+					div>
 						<div class="row">
 							<div class="12u">
 								<form method="post" action="#">
@@ -232,12 +211,11 @@
 											</div>
 										</div>
 									</div>
-								</form>
+								</form> 
 							</div>
-						</div>
+						</div>-->
 						<div class="row">
 							<div class="12u">
-								<hr />
 								<h3>Find me on ...</h3>
 								<ul class="social">
 									<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
@@ -259,7 +237,6 @@
 									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
 									-->
 								</ul>
-								<hr />
 							</div>
 						</div>
 					</div>
