--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<li><a href="#top">About</a></li>
 					<li><a href="#portfolio">Projects</a></li>
 					<li><a href="#work">Experience</a></li>
-					<!--<li><a href="#publications">Publications</a></li>-->
+					<li><a href="#publications">Patents</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -93,8 +93,8 @@
 								<h3><a href="https://github.com/nlakshmanan/DataScienceFall19">Citizens Police Data Project</a></h3>
 								<p>Data Science<br/>
 								SQL, Databricks, Visualization - Tableau, D3, Data Cleaning, Document Tagging <br/>
-								<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/1793811414263623/8855542390127832/latest.html"> GraphFrames connected components</a>
-								<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/98748205141515/8855542390127832/latest.html"> GraphFrames visualization Complete </a>
+								<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/1793811414263623/8855542390127832/latest.html"> GraphFrames connected components</a> <br/>
+								<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/98748205141515/8855542390127832/latest.html"> GraphFrames visualization </a><br/>
 								<!--<a href="https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/3414463775796352/98748205141507/8855542390127832/latest.html"> GraphFrames visualization Discrete </a>-->
 								<a href="https://nlakshmanan.github.io/D3-sunburn/"> D3 visualization </a> </p>
 							</article>
@@ -104,6 +104,7 @@
 								<a href="https://github.com/nlakshmanan/Conversational-AI" class="image featured"><img src="images/Conversational-AI.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Conversational-AI"></a>ScriptIt</h3>
 								<p>Dialog generation and ChatBots<br/>
+									Updating soon!<br/>
 								Dialo-GPT2</p>
 							</article>
 						</div>
@@ -112,6 +113,7 @@
 								<a href="https://github.com/nlakshmanan/Neural-Machine-Transalation" class="image featured"><img src="images/deepLearning.jpeg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Neural-Machine-Transalation">Neural Machine transalation</a></h3>
 								<p>Statistical Language Modelling<br/>
+									Updating soon!<br/>
 								Pytorch</p>
 							</article>
 						</div>
@@ -120,6 +122,7 @@
 								<a href="https://github.com/nlakshmanan/Architecture-Design" class="image featured"><img src="images/searchEngine.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Architecture-Design">Architecture Design</a></h3>
 								<p>Software Scalable Architectures<br/>
+									Updating soon!<br/>
 								AWS, Serverless functions, NoSQL, Java, system design</p>
 							</article>
 						</div>
@@ -127,39 +130,19 @@
 			</article>
 		</div>
 
-		<!-- Web / App development -->
-		<!--<div class="wrapper style3">
-			<article id="portfolio">
+		<div class="wrapper style3">
+			<article id="publications">
 				<header>
-					<h2> Web / App development / Visualization</h2>
+					<h2>Patents</h2>
 					<p></p>
 				</header>
 				<div class="container">
-					<div class="row">
-						<div class="4u">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">NearUS</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="4u">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Medius</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
-						<div class="4u">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Sunburn-D3</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
-							</article>
-						</div>
+					<ul>
+						<li><a href="https://patents.google.com/patent/US10528342B2/en?oq=10%2c528%2c342">Function tracking on source code files, Jan 2020</a></li> </br>
+					</ul>
 					</div>
 			</article>
-		</div>-->
+		</div>
 
 		<!-- Work -->
 			<div class="wrapper style2">
