--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 								<h1><strong>Nachammai Lakshmanan</strong></h1>
 							</header>
 							<p>I am a Master in Computer Science student at <a href="https://www.mccormick.northwestern.edu/computer-science/">Northwestern University</a> 
-								My areas of interest include machine learning, statistical language modeling, algorithms and scalable systems. 
-								I am currently working on finding insights to improvise quality of long sentences in neural machine transalation.<br/><br/>
+								My areas of interest include machine learning, data science, statistical language modeling, algorithms and scalable systems. <br/><br/>
 								email:nachammai@u.northwestern.edu <br/>
 								Last updated: 3rd May 2020
 							</p>
