--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 								<a href="https://nlakshmanan.github.io/D3-sunburn/"> D3 visualization </a> </p>
 							</article>
 						</div>
-						<div class="4u">
+						<!--<div class="4u">
 							<article class="box style2">
 								<a href="https://github.com/nlakshmanan/Conversational-AI" class="image featured"><img src="images/Conversational-AI.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Conversational-AI"></a>ScriptIt</h3>
 								<p>Dialog generation and ChatBots<br/>
-									Updating soon!<br/>
+									[In Progress]<br/>
 								Dialo-GPT2</p>
 							</article>
 						</div>
@@ -112,7 +112,7 @@
 								<a href="https://github.com/nlakshmanan/Neural-Machine-Transalation" class="image featured"><img src="images/deepLearning.jpeg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Neural-Machine-Transalation">Neural Machine transalation</a></h3>
 								<p>Statistical Language Modelling<br/>
-									Updating soon!<br/>
+									[In Progress]<br/>
 								Pytorch</p>
 							</article>
 						</div>
@@ -121,10 +121,10 @@
 								<a href="https://github.com/nlakshmanan/Architecture-Design" class="image featured"><img src="images/searchEngine.jpg" alt="" /></a>
 								<h3><a href="https://github.com/nlakshmanan/Architecture-Design">Architecture Design</a></h3>
 								<p>Software Scalable Architectures<br/>
-									Updating soon!<br/>
+									[In Progress]<br/>
 								AWS, Serverless functions, NoSQL, Java, system design</p>
 							</article>
-						</div>
+						</div>-->
 					</div>
 			</article>
 		</div>
